# yt-mcp

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_installation.py
examples/: basic_usage.py
models/: schemas.py
pipeline/: chain.py  evaluators.py  extractors.py  processors.py  synthesizers.py
tests/: test_config.py
utils/: __init__.py  credentials.py  errors.py  logging.py
